# ghosttx

./: LICENSE  README.md  package-lock.json
contract/: Cargo.toml  README.md
contract/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  postcss.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: EfficiencyMatrix.jsx  Header.jsx  IntentConsole.jsx  LogConsole.jsx  SearchConsole.jsx  TimeLineCard.jsx
